# sci-librarian

./: .gitignore  Cargo.toml  README.md
docs/: specification.md
migrations/: 20251230000000_initial_schema.sql  20260106000335_add_file_name_to_files.sql
src/: clients.rs  indexing.rs  lib.rs  main.rs  models.rs  pipeline.rs  storage.rs
tests/: dropbox_integration_test.rs  integration_test.rs
