[package]
name = "sci-librarian"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
indicatif = "0.18.3"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
lopdf = "0.38.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.17.1"
